# I2C-RPI-Server

./: .gitignore  CMakeLists.txt  README.md
include/: Command.h  I2Ctalker.h  Main.h  NetServer.hpp  twowire.h  wiringPISimulate.h
src/: Command.cpp  I2Ctalker.cpp  Main.cpp  NetServer.cpp  main.cpp  wiringPISimulate.cpp
src/TwoWire/: CMakeLists.txt  twowire.cpp  twowire.h
